# crazystockbadges

./: .dockerignore  .env.example  .gitignore  CLINE_TASK_DIALOGUE.md  CrazyStockBadge_Logbook.md  Dockerfile  ENV_SETUP.md  README.md  TEST_MODEL_GENERATOR_README.md  TSLA_disc_badge.scad  app.py  badge_factory.py  badge_factory_refactored.py  complexity_analyser.py  crazystockbadges.py  crazystockbadges.py.orig  database.py  deploy.sh  disc.scad  docker-compose.yml  environment.yml  ga_engine.py  genetic_algorithm.py  main.py  marketdata.py  package-lock.json  pyproject.toml  requirements.txt  sentiment_analyser.py  sentiment_analysis.json  simple_viewer_server.py  stock_data  stock_report  test_badge_factory.py  test_complexity_analyser.py  test_ga_engine.py  test_marketdata.py  test_model_generator.py  test_viewer.html  vpn_monitor.sh
.claude/: settings.local.json
cache/: AAPL_1mo_20250411.csv  AAPL_1mo_20250412.csv  AAPL_1y_20250411.csv  AAPL_1y_20250412.csv  AAPL_1y_20250414.csv  AAPL_1y_20250415.csv  AAPL_1y_20250416.csv  AAPL_1y_20250419.csv  AAPL_1y_20250420.csv  AAPL_1y_20250425.csv  AAPL_1y_20250426.csv  AAPL_1y_20250427.csv  AAPL_None_20250414.csv  AMZN_1y_20250416.csv  BARC.L_1y_20250414.csv  BARC.L_1y_20250424.csv  BP_1y_20250427.csv  GOOGL_1y_20250416.csv  MSFT_1y_20250416.csv  MSFT_1y_20250424.csv  MSFT_1y_20250426.csv  NFLX_1y_20250416.csv  TSLA_1y_20250414.csv  TSLA_1y_20250416.csv  TSLA_1y_20250426.csv  VOD.L_1y_20250414.csv  V_1y_20250427.csv  WMT_1y_20250427.csv  ^FTSE_1y_20250425.csv  ^FTSE_1y_20250426.csv  ^FTSE_1y_20250427.csv  ^NDX_1y_20250426.csv  (+1 more)
(+83 files in other folders)
