[project]
name = "crazystockbadges"
version = "0.1.0"
description = "Generate 3D-printable badges from stock market data using a genetic algorithm"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "yfinance>=0.2.55",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "matplotlib>=3.10.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "nltk>=3.9.1",
    "pygad>=3.4.0",
    "trimesh>=4.6.4",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
    "solidpython>=1.1.3",
    "euclid3>=0.1",
    "pypng>=0.0.19",
    "ta>=0.11.0",
    "colorama>=0.4.6",
    "setuptools<81",
]

[project.scripts]
crazystockbadges = "crazystockbadges:main"
